--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "multiavatar",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node main.ts",
-    "start": "ts-node main.ts",
+    "start": "ts-node src/main.ts",
     "build": "rollup -c"
   },
   "author": "",
@@ -24,9 +22,8 @@
   "dependencies": {
     "@multiavatar/multiavatar": "^1.0.7",
     "@rollup/plugin-commonjs": "^25.0.3",
+    "canvas": "^2.11.2",
     "express": "^4.18.2",
-    "sharp": "^0.32.4",
-    "svg2png": "^4.1.1",
     "ts-md5": "^1.3.1"
   }
 }
