--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "rollup": "^3.27.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@rollup/plugin-commonjs": "^25.0.3"
   },
   "dependencies": {
     "@multiavatar/multiavatar": "^1.0.7",
-    "@rollup/plugin-commonjs": "^25.0.3",
     "canvas": "^2.11.2",
     "express": "^4.18.2",
     "ts-md5": "^1.3.1"
