--- a/package.json
+++ b/package.json
@@ -10,20 +10,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-typescript": "^11.1.2",
     "@types/express": "^4.17.17",
-    "rollup": "^3.27.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
-    "typescript": "^5.1.6",
-    "@rollup/plugin-commonjs": "^25.0.3"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@multiavatar/multiavatar": "^1.0.7",
-    "canvas": "^2.11.2",
     "express": "^4.18.2",
+    "sharp": "^0.32.4",
     "ts-md5": "^1.3.1"
   }
 }
