--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": false,
     "skipLibCheck": true,
-    "moduleResolution": "NodeNext"
+    "moduleResolution": "NodeNext",
+    "outDir": "dist"
   },
   "ts-node": {
     "esm": true
