--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,29 +2,41 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: checkout
-      uses: actions/checkout@v3
-    
-    - name: Docker Login
-      uses: docker/login-action@v2.1.0
-      with:
-        username: tonyzzp
-        password: ${{secrets.DOCKER_USER_PASSWORD}}
-        
-    - name: docker build
-      run: docker build -t ${{vars.DOCKER_IMAGE_NAME}} .
-    
-    - name: docker push
-      run: docker push ${{vars.DOCKER_IMAGE_NAME}}
-      
-    - name: restart server
-      run: curl "http://a.veikr.com:8000/action/restartserver?x-token=${{secrets.SERVER_TOOLS_TOKEN}}&file=tonyzzp_avatar"
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: Docker Login
+        uses: docker/login-action@v2.1.0
+        with:
+          username: tonyzzp
+          password: ${{secrets.DOCKER_USER_PASSWORD}}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{vars.DOCKER_IMAGE_NAME}}
+          platforms: linux/amd64,linux/arm64
+
+      - name: restart server
+        run: curl "http://a.veikr.com:8000/action/restartserver?x-token=${{secrets.SERVER_TOOLS_TOKEN}}&file=tonyzzp_avatar"
