--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,9 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v2.1.0
         with:
+          registry: ghcr.io
           username: tonyzzp
-          password: ${{secrets.DOCKER_USER_PASSWORD}}
+          password: ${{secrets.GHCR_PASSWORD}}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -35,7 +36,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{vars.DOCKER_IMAGE_NAME}}
+            ${{vars.GHCR_IMAGE_NAME}}
           platforms: linux/amd64,linux/arm64
 
       - name: restart server
