--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v2.1.0
         with:
-          registry: ghcr.io
-          username: tonyzzp
-          password: ${{secrets.GHCR_PASSWORD}}
+          registry: ${{vars.DOCKER_REGISTRY}}
+          username: ${{vars.DOCKER_USER_NAME}}
+          password: ${{secrets.DOCKER_USER_PASSWORD}}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -36,7 +36,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{vars.GHCR_IMAGE_NAME}}
+            ${{vars.DOCKER_REGISTRY}/}${{github.repository}}
           platforms: linux/amd64,linux/arm64
 
       - name: restart server
